# djaodjin-pages

./: .bowerrc  .gitignore  Makefile  README.md  bower.json  changelog  mkdocs.yml  package.json  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  getting_started.rst  index.md  index.rst  introduction.rst  license.md  pages_edition.rst  pages_upload_media.rst  pages_upload_template.rst
docs/user-guide/: getting-started.md  pages-edition.md  pages-upload-media.md
pages/: __init__.py  admin.py  api.py  compat.py  decorators.py  docs.py  encrypt_path.py  extras.py  helpers.py  locals.py  mixins.py  models.py  serializers.py  settings.py  signals.py  tasks.py  themes.py  uploadhandler.py  urls.py  utils.py  views.py
pages/api/: assets.py  bootstrap_variables.py  edition.py  elements.py  less_variables.py  newsfeed.py  progress.py  reactions.py  relationship.py  sequences.py  serializers.py  sitecss.py  sources.py  themes.py  upload_media.py  upload_package.py  upload_template.py
pages/backends/: s3.py
pages/templates/: _paginator.html  pages_edition.html  pages_editor_modes.html  pages_upload_templates.html
pages/templatetags/: pages_static.py  pages_tags.py
pages/urls/: __init__.py  api.py  editables.py  themes.py  uploaded_package.py  uploaded_template.py
pages/views/: __init__.py  editables.py  elements.py  pages.py  progress.py  sequences.py  themes.py
testsite/: admin.py  bower.js  models.py  package.json  requirements-legacy.txt  requirements.txt  settings.py  urls.py  views.py  wsgi.py
testsite/fixtures/: default-db.json  initial_data.json
(+74 files in other folders)
